# rational-client

./: README.md  pyproject.toml
examples/: workflow_docling.py  workflow_hackernews_rss.py  workflow_input.json  workflow_orders.py  workflow_orgchart.py  workflow_pengo_products.py  workflow_products.py  workflow_pymupdf4llm.py  workflow_stores.py  workflow_urls.py
src/rational_client/: __init__.py
src/rational_client/_vendor/backend_knowledge_v0_client/: __init__.py
src/rational_client/_vendor/backend_knowledge_v0_client/models/: __init__.py  annotation_dto.py  annotation_dto_page.py  color_config.py  color_config_colors.py  create_annotation_request.py  create_knowledge_category_request.py  create_knowledge_request.py  create_knowledge_sync_job_request.py  create_processing_rule_request.py  create_processing_workflow_request.py  create_resource_relation_request.py  create_resource_request.py  create_synced_resource_request.py  delete_policy.py  deployment_parameters.py  get_knowledge_v0_knowledge_knowledge_id_categories_sorting_item.py  get_knowledge_v0_knowledge_knowledge_id_knowledge_sync_job_sorting_item.py  get_knowledge_v0_knowledge_knowledge_id_resource_relations_sorting_item.py  get_knowledge_v0_knowledge_knowledge_id_resource_sorting_item.py  knowledge_category_dto.py  (+51 more)
src/rational_client/_vendor/backend_management_v0_client/: __init__.py
src/rational_client/core/: __init__.py  backend_clients.py  chat_completion.py  public_api.py  rule_based_keywords.py  utils.py
src/rational_client/utils/: workflow.py
tests/: test_public_api.py  utils.py
(+310 files in other folders)
